Name: run-server
Version: 1.0.0

Synopsis:
  The server for package.elm-lang.org

Description:
  Serve documentation, register packages, route people to downloads, etc.

Homepage: http://package.elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2013-present Evan Czaplicki

Category: Language

Build-type: Simple
Cabal-version: >=1.9

source-repository head
  type:     git
  location: git://github.com/elm-lang/package.elm-lang.org.git

Executable run-server
  hs-source-dirs:
    src/backend
    zelm-compiler/compiler/src
    zelm-compiler/builder/src

  Main-is:
    Main.hs

  ghc-options:
    -threaded -O2 -W -rtsopts

  Build-depends:
    ansi-terminal,
    ansi-wl-pprint <= 0.6.9,
    base,
    binary,
    blaze-html,
    blaze-markup,
    bytestring,
    cmdargs,
    containers,
    directory,
    edit-distance,
    filepath,
    ghc-prim,
    HTTP,
    http-client,
    http-client-tls,
    http-types,
    language-glsl,
    io-streams,
    mtl,
    parsec,
    process,
    raw-strings-qq,
    scientific,
    SHA,
    snap-core,
    snap-server,
    text,
    time,
    unix-compat,
    unordered-containers,
    utf8-string,
    vector,
    zip-archive

  other-modules:
    AST.Canonical
    AST.Source
    AST.Utils.Binop
    AST.Utils.Shader
    Artifacts
    Data.Bag
    Data.ByteString.Validate
    Data.Index
    Data.Name
    Data.NonEmptyList
    Data.OneOrMore
    Data.Utf8
    Elm.Constraint
    Elm.Float
    Elm.Licenses
    Elm.Magnitude
    Elm.ModuleName
    Elm.Outline
    Elm.OutlineConstants
    Elm.Package
    Elm.String
    Elm.Version
    File
    GitHub
    Gzip
    Helpers
    Http
    Json.Decode
    Json.Encode
    Json.String
    Legacy
    Memory
    Memory.History
    Nitpick.PatternMatches
    Package.Path
    Package.Register
    Package.Releases
    Parse.Keyword
    Parse.Primitives
    Parse.Symbol
    Parse.Variable
    Paths_elm
    Reporting.Annotation
    Reporting.Doc
    Reporting.Error
    Reporting.Error.Canonicalize
    Reporting.Error.Docs
    Reporting.Error.Import
    Reporting.Error.Json
    Reporting.Error.Main
    Reporting.Error.Pattern
    Reporting.Error.Syntax
    Reporting.Error.Type
    Reporting.Exit
    Reporting.Exit.Help
    Reporting.Render.Code
    Reporting.Render.Type
    Reporting.Render.Type.Localizer
    Reporting.Report
    Reporting.Suggest
    ServeFile
    Server.Error
    Server.Router
    Sitemap
    Type.Error
